--- a/并发与多线程/线程安全问题.md
+++ b/并发与多线程/线程安全问题.md
@@ -4,7 +4,13 @@
 
 ​	多个线程访问一个对象，不考虑这些线程在运行环境下的调度和交替运行，也不需要进行额外的同步，或者调用方进行其他的协调操作，调用这个对象的行为都可以获得正确的结果。那么这个对象是线程安全的。
 
-### 2，有什么办法来保证线程的安全问题
+### 2，synchronized的使用
+
++ 该关键字主要包含了两个特征：
+
+  互斥性：保证在同一时刻，只有一个线程可以执行synchronized修饰的方法和代码块。
+
+  可见性：保证了线程工作内存中的变量与公共内存中的变量同步，使得公共内存中的变量被其他线程读取都是最新的结果。
 
 + **使用synchronized关键字**
 
@@ -153,3 +159,7 @@
 
 
   结果中可以看出只有当Thread1完成之后，Thread3才开始执行。而Thread1并不会影响Thread2的执行，因为Thread2使用的是对象锁。
+
+### 3，可重入性
+
+​	该性质就是当一个线程获取某个锁的时候，如果该锁已经被该线程所获取到，那么该线程也是可以继续获取这个锁的。
