--- a/并发与多线程/线程安全问题.md
+++ b/并发与多线程/线程安全问题.md
@@ -8,9 +8,9 @@
 
 + 该关键字主要包含了两个特征：
 
-  互斥性：保证在同一时刻，只有一个线程可以执行synchronized修饰的方法和代码块。
+  **互斥性**：保证在同一时刻，只有一个线程可以执行synchronized修饰的方法和代码块。
 
-  可见性：保证了线程工作内存中的变量与公共内存中的变量同步，使得公共内存中的变量被其他线程读取都是最新的结果。
+  **可见性**：保证了线程工作内存中的变量与公共内存中的变量同步，使得公共内存中的变量被其他线程读取都是最新的结果。
 
 + **使用synchronized关键字**
 
@@ -163,3 +163,23 @@
 ### 3，可重入性
 
 ​	该性质就是当一个线程获取某个锁的时候，如果该锁已经被该线程所获取到，那么该线程也是可以继续获取这个锁的。
+
+### 4,并发编程中的三个概念
+
++ **原子性**：对于一个操作或者多个操作，要么全部都做并且在操作的执行过程中不被外界因素所破坏，要么全部都不执行。
+
++ **有序性**：程序执行的顺序按照代码的先后顺序执行。(主要是针对指令重排序问题而言的，虽然重排序对于单个线程而言，不会出现什么问题，但是对于多个线程而言就不满足了)
+
++ **可见性**：是指多个线程访问同一个变量的时候，当其中的一个线程对该变量进行了修改之后，其他线程能够及时的看到该变量的变化。
+
+### 5，volatile关键字
+
++ 该关键字保证了有序性(禁止了指令的重排序)，可见性(及时的将新的结果写入到公共内存当中)，但是没有保证原子性，也就是说，在使用volatitle关键字的时候，一定要保证操作的原子性。
+
++ volatile和synchronized的区别
+
+  volatile再某些情况下的性能是要由于synchrnoized的，但是volatile是无法替代synchrnoized，原因是volatile无法保证操作的原子性，因此就没有办法保证线程的安全。
+
+  volatile使用情景：1，对变量的写操作不依赖于当前值
+
+  ​				2，该变量没有包含在具有其他变量的不变式中
