--- a/并发与多线程/线程池总结.md
+++ b/并发与多线程/线程池总结.md
@@ -1,6 +1,6 @@
 # 线程池总结
 
-### 1，线程池地好处
+### 1，线程池的好处
 
 + 降低资源的消耗。通过重复利用已创建的线程降低线程的创建和销毁造成的消耗。
 + 提高相应的速度。当任务到达时，任务可以不需要等到线程的创建就能立即执行。
@@ -15,3 +15,15 @@
   + 线程池判断<font color="red">线程池的线程</font>是否都处于工作状态，如果没有，则创建一个新的工作线程来执行任务(需要获取全局锁)。如果已经满了，则交给饱和策略来处理
 
   采用上述的流程是为了让线程尽可能地避免获取全局锁(影响效率的瓶颈),在ThreadPoolExecutor完成预热之后，(当前运行的线程数大于核心线程数),几乎所有的execute()方法调用都是执行第二个不揍，也就是将线程加入到工作队列当中。
+
++ 工作线程：线程池创建线程的时候，会将线程封装成工作线程Worker，在线程执行完之后，它不会被销毁，而是从阻塞队列中获取任务来执行。
++ 饱和策略
+  + 直接抛出异常
+  + 只用调用者所在线程来运行任务
+  + 丢弃队列中最近的一个任务，并执行当前任务
+  + 不处理，丢弃掉
+
+### 3，线程池的使用
+
++ 线程池的创建
+  + 
