--- a/并发与多线程/线程池总结.md
+++ b/并发与多线程/线程池总结.md
@@ -26,4 +26,26 @@
 ### 3，线程池的使用
 
 + 线程池的创建
-  + 
+
+  + ~~~ java
+    import java.util.concurrent.ExecutorService;
+    import java.util.concurrent.Executors;
+    
+    public class MyThreadPool{
+        public static void main(String[] args){
+            ExecutorService exe=Executors.newCachedThreadPool();  //创建线程池
+            exe.execute(()->{
+                System.out.println("asd");
+            });
+            exe.shutdown();  //关闭线程池
+        }
+    }
+    ~~~
+
+    四种常见的线程池
+
+    + FixThreadPool：用于创建使用固定线程数的ThreadPool,corePoolSize=maximmumPoolsize=n(固定)，阻塞队列位LinkedBlockingQueue(基于链表结构的阻塞队列，按照先进先出的原则)。
+    + SingleThreadExecutor：用于创建一个单线程的线程池，corePoolSize=maximumPoolsize=1,阻塞队列为LinkedBlockedQueue。
+    + CachedThreadPool：用于创建一个可缓存的线程池，corePoolSize=0,maximumPoolSize=Integer.MAX_VALUE,阻塞队列为SynchronousQueue(一个不存储元素的阻塞队列，每个插入操作必须等到另一个线程调用移除操作)。
+    + ScheduledThreadPoolExecutor：用于创建一个大小无限的线程池，此线程支持定时以及周期性执行任务的需求。
+
