--- a/并发与多线程/线程池总结.md
+++ b/并发与多线程/线程池总结.md
@@ -28,7 +28,7 @@
 + ##### 阻塞队列
 
   + ArrayBlockingQueue：是一个基于数组结构的有界阻塞队列，按照先进先出的原则对元素进行排列。
-  + LinkedBlockingQueue：一个基于来链表结构的阻塞队列，按照先进先出规则。
+  + LinkedBlockingQueue：一个基于来链表结构的无界阻塞队列，按照先进先出规则。
   + SynchronousQueue：一个不存储元素的阻塞队列，每个插入操作必须等到另一个线程调用移除操作，否则插入操作一直处于阻塞状态。
   + PriorityBlockingQueue：一个具有优先级别的无线阻塞队列。
 
