--- a/并发与多线程/单例模式解析.md
+++ b/并发与多线程/单例模式解析.md
@@ -63,5 +63,42 @@
 
 + 但是对于懒汉式来说，在多线程的环境下则不宜动就是安全的。因为在在懒汉式实现单例模式的时候，有这样一句话：if(singleT==null) singleT=new T()；这句话当处于多个线程的时候，可能会在if判断句的地方发生歧义，不能保证线程安全。
 
-  解决办法：synchronized
+  解决办法：
+
+  双重校验线程安全
+
+  ~~~ java
+  import com.sun.xml.internal.txw2.output.StaxSerializer;
+  
+  public class DoubleCheckThreadsafe {
+      public static void main(String[] args) {
+          for(int i=1;i<=10;i++){
+              new Thread(){
+                  @Override
+                  public void run() {                    
+                      System.out.println(Test.getTest());
+                  }
+              }.start();
+          }
+      }
+  }
+  
+  // 饿汉模式
+  class Test {
+  
+      public static volatile Test test = null;
+      public static Test getTest() {
+          if (test == null) {               //第一次检查
+              synchronized (Test.class) {
+                  if (test == null)         //第二次检查
+                      test = new Test();
+                  return test;
+              }
+          }
+          return test;
+      }
+  
+  }
+  ~~~
+
 
