--- a/并发与多线程/多线程.md
+++ b/并发与多线程/多线程.md
@@ -33,6 +33,43 @@ public class _Thread{
 }
 ~~~
 
+使用Callable接口也可实现线程，Callable可以从线程中返回内容
+
+~~~ java
+package test1;
+
+import java.util.concurrent.Callable;
+import java.util.concurrent.ExecutionException;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
+import java.util.concurrent.Future;
+import java.util.concurrent.FutureTask;
+
+public class T1 {
+	public static void main(String[] args) throws InterruptedException, ExecutionException {
+		Mycallable aMycallable=new Mycallable();
+		ExecutorService executorService=Executors.newCachedThreadPool();
+        //使用Future
+		Future<String> xFuture=executorService.submit(aMycallable);	
+		System.out.println(xFuture.get());
+		
+		//使用FutureTask
+		FutureTask<String> xFutureTask=new FutureTask<String>(aMycallable);
+		new Thread(xFutureTask).start();
+		System.out.println(xFutureTask.get());
+		
+		
+	}
+}
+class Mycallable implements Callable<String>{
+	@Override
+	public String call() throws Exception {
+		// TODO Auto-generated method stub
+		return "hello";
+	}
+}
+~~~
+
 
 
 通过start()方法启动一个线程之后，若线程获得了CPU执行的时间，便进入run()方法去执行具体的任务。start()方法的作用就是通知“线程规划器”，该线程已经准备就绪，以便让系统安排一个时间来调用其run()方法，也就是使线程得到运行。
